added mongodb container in docker-compose
